--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,8 +1,14 @@
 <h1><%= @article.title %></h1>
-<p><%= @article.body %></p>
 <%= link_to "delete", article_path(@article), method: :delete,data: {confirm: "Really delete the article?"}
   %>
-<%= link_to "edit", edit_article_path(@article) %>
+<%= link_to "edit", edit_article_path(@article) %><br/>
+<p>
+  Tags:
+  <% @article.tags.each do |tag| %>
+    <%= link_to tag.name, tag_path(tag) %>
+  <% end %>
+</p><br/>
+<p><%= @article.body %></p>
 
 <h3>Comments (<%= @article.comments.size %>)</h3>
 <%= render partial: 'articles/comment', collection: @article.comments %>
