--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,8 +8,13 @@
     <%= link_to tag.name, tag_path(tag) %>
   <% end %>
 </p><br/>
-<p><%= @article.body %></p>
-
+<% if @article.image.exists? %>
+      <%= image_tag @article.image.url(:medium) %><br/>
+  <% end %>
+<br/>
+<div style="background-color:#34506e;border-radius: 15px;">
+<p style="padding:10px; color:#FFF;"><%= @article.body %></p>
+</div>
 <h3>Comments (<%= @article.comments.size %>)</h3>
 <%= render partial: 'articles/comment', collection: @article.comments %>
 
