--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,9 @@
 <h1><%= @article.title %></h1>
+<% if logged_in? %>
 <%= link_to "delete", article_path(@article), method: :delete,data: {confirm: "Really delete the article?"}
   %>
 <%= link_to "edit", edit_article_path(@article) %><br/>
+<% end %>
 <p>
   Tags:
   <% @article.tags.each do |tag| %>
